[package]
name = "peercred"
version = "0.1.0"
edition = "2021"
description = "SO_PEERCRED helper for launcherd — returns caller UID over unix socket"

[[bin]]
name = "peercred"
path = "src/main.rs"

[dependencies]
# No external deps — just libc for SO_PEERCRED

[profile.release]
strip = true
lto = true
opt-level = "z"
